--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
      {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+     
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  
     <meta charset="UTF-8">
 </head>
 
@@ -28,7 +30,7 @@
                         {% csrf_token %}
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Username" name="username" >
-                            <input type="password" class="form-control" placeholder="Username" name="psw" >
+                            <input type="password" class="form-control" placeholder="Password" name="psw" >
                             <button class="btn btn-primary" type="submit">Login</button>
                             <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
                         </div>
@@ -40,48 +42,61 @@
     </nav>
 
     <!-- Page content -->
-    <div class="container-fluid">
+    <div class="container">
             <h2>{{ course.name }}</h2>
             <div class="card-columns-vertical">
                 {% for lesson in course.lesson_set.all %}
                     <div class="card mt-1">
-                        <div class="card-header"><h5>Lesson {{lesson.order|add:1}}: {{lesson.title}}</h5></div>
+                        <!--<div class="card-header"><h5>Lesson {{lesson.order|add:1}}: {{lesson.title}}</h5></div>-->
+                        <div class="card-header"><h5>Lesson {{lesson.order}}: {{lesson.title}}</h5></div>
                         <div class="card-body">{{lesson.content}}</div>
                     </div>
                 {% endfor %}
             </div>
 
-            <!-- Task: show questions and choices -->
-            {% if user.is_authenticated %}
-            <div class="mt-4">
-                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#exam" aria-expanded="false" aria-controls="exam">
-                    Show Exam
-                </button>
-                <div id="exam" class="collapse mt-3">
-                    <form id="questionform" action="{% url 'onlinecourse:submit_exam' course.id %}" method="post">
-                        {% csrf_token %}
-                        {% for question in course.question_set.all %}
-                        <div class="card mt-1">
-                            <div class="card-header">
-                                <h5>{{ question.question_text }}</h5>
-                            </div>
-                            <div class="card-body">
-                                {% for choice in question.choice_set.all %}
-                                <div class="form-check">
-                                    <input type="checkbox" name="choice_{{ choice.id }}" class="form-check-input" id="choice_{{ choice.id }}" value="{{ choice.id }}">
-                                    <label class="form-check-label" for="choice_{{ choice.id }}">
-                                        {{ choice.choice_text }}
-                                    </label>
-                                </div>
-                                {% endfor %}
-                            </div>
-                        </div>
-                        {% endfor %}
-                        <input class="btn btn-success btn-block" type="submit" value="Submit">
-                    </form>
-                </div>
+
+            <!-- Task: show questions and choices -->          
+            <div class="btn btn-primary btn-block text-right" data-toggle="collapse" data-target="#exam" >
+                Start Exam
             </div>
-            {% endif %}
-    </div>
+            
+            <div id="exam" class="collapse ">
+                
+            <!-- <HINT> If user is authenticated, show course exam with a list of question -->
+            {% if user.is_authenticated %}
+                <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="post">
+
+                {% for question in question_list %}                    
+                    <div class="card mt-1">
+                        <div class="card-header">
+                            <!-- Some questions texts are python's code, or just need tabulations or
+                                break line, so they have been recorded in html format in order
+                                to display correctly  with indentation. We use autoescape tag 
+                                to escape html tag-->
+                            <h5>{% autoescape off %} {{ question.question_text}} {% endautoescape %}</h5>
+                        </div>
+
+                        {% csrf_token %}
+                        <div class="form-group">
+                            
+                        {% for choice in question.choice_set.all %}                            
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="checkbox" name="choice_{{choice.id}}"
+                                        class="form-check-input" id="{{choice.id}}"
+                                        value="{{choice.id}}">
+                                        {% autoescape off %}{{ choice.choice_text }}{% endautoescape %}
+                                </label>
+                            </div>
+                        {% endfor %} 
+                        </div>
+                    </div>
+                {% endfor %}
+
+                        <input class="btn btn-success btn-block text-right" type="submit" value="Submit">
+                </form>
+            {% endif %}    
+            </div>
+        </div>
 </body>
 </html>
