--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+     
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+   
 </head>
 <body>
 
@@ -35,37 +37,67 @@
     </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container">
     {% if grade > 80 %}
-    <div class="alert alert-success">
-       <!--HINT Display passed info -->
-        <h4 class="alert-heading">Congratulations!</h4>
-        <p>You have passed the exam with a score of {{ grade }} out of 100.</p>
-    </div>
-        {% else %}
+        <div class="alert alert-success">
+            <!--HINT Display passed info -->
+            <b>Congratulations</b>, {{ user.first_name }} ! You have passed the exam 
+            with score {{ grade }} / 100
+        </div>
+        <a class="btn btn-link text-success" href="{% url 'onlinecourse:course_details' course.id %}">
+            Back to course</a>
+    {% else %}
         <div class="alert alert-danger">
             <!--HINT Display failed info -->
-            <h4 class="alert-heading">Sorry!</h4>
-            <p>You have failed the exam with a score of {{ grade }} out of 100.</p>
+            <b>Failed</b>, Sorry {{ user.first_name }} ! You have failed exam with score {{ grade }} / 100
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
-        {% endif %}
-        <div class="card-columns-vertical mt-1">
+    {% endif %}
+
+    <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
-            {% for question, is_correct in exam_results %}
-            <div class="card">
+
+        <!--HINT Display exam results-->
+        {% for question in question_list %}                    
+            <div class="card mt-1">
+                <div class="card-header">
+                    <!-- Some questions texts are python's code, or just need tabulations or
+                    break line, so they have been recorded in html format in order
+                    to display correctly  with indentation. We use autoescape tag 
+                    to escape html tag-->
+                    <h5>{% autoescape off %} {{ question.question_text}} {% endautoescape %}</h5>
+                </div>
+
+                {% csrf_token %}
                 <div class="card-body">
-                    <h6 class="card-subtitle mb-2 text-muted">{{ question.question_text }}</h6>
-                    {% if is_correct %}
-                    <p class="card-text text-success">Correct</p>
-                    {% else %}
-                    <p class="card-text text-danger">Incorrect</p>
-                    {% endif %}
+                    <ul>
+                    {% for choice in question.choice_set.all %}
+                        {% if choice.id in selected_ids and choice.is_correct %}
+                            <li><p class="text-success">
+                                Correct answer : 
+                                {% autoescape off %}{{ choice.choice_text }}{% endautoescape %}
+                            </p></li>
+                        {% elif choice.id in selected_ids and not choice.is_correct %}
+                            <li><p class="text-danger">
+                                Incorrect answer : 
+                                {% autoescape off %}{{ choice.choice_text }}{% endautoescape %}
+                            </p></li>
+                        {% elif not choice.id in selected_ids and choice.is_correct %}
+                            <li><p class="text-warning">
+                                Not selected : {% autoescape off %}{{ choice.choice_text }}{% endautoescape %}
+                            </p></li>
+                        {% else %}
+                            <li><p class="text">
+                                {{ choice.choice_text }}
+                            </p></li>
+                        {% endif %}
+                    {% endfor %}
+                    </ul>
                 </div>
             </div>
-            {% endfor %}
-        </div>
+        {% endfor %}
     </div>
+</div>
+
 </body>
 </html>
